--- a/index.html
+++ b/index.html
@@ -4,11 +4,112 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap" rel="stylesheet">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <h1>Hi</h1>
+  <header class="hader">
+    <nav class="navBar">
+      <div class="logo">
+        <h1>G3 Architects</h1>
+      </div>
+      <div class="nabItems">
+        <ul>
+          <li class="navItem"><a href="">Home</a></li>
+          <li class="navItem"><a href="">About</a></li>
+          <li class="navItem"><a href="">Contact Us</a></li>
+          <li class="navItem"><a href="">Login</a></li>
+        </ul>
+      </div>
+    </nav>
+    <div class="hederContainer">
+      <div class="hedContent">
+        <div class="content">
+          <h1 class="title">Brand New Group of Architects</h1>
+          <p class="des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+            alteration
+            in
+            some form,
+            by injected humour, or randomised words which don't look even</p>
+        </div>
+        <button class="btn-primary">Explore More</button>
+      </div>
+      <div class="headPicture">
+        <img src="./images/banner.png" alt="">
+      </div>
+    </div>
+  </header>
+  <main>
+    <section class="teamSection">
+      <div class="teamMan">
+        <img src="./images/team1.png" alt="">
+        <img src="./images/team2.png" alt="">
+        <img src="./images/team3.png" alt="">
+        <img src="./images/team4.png" alt="">
+      </div>
+      <div class="temContent">
+        <h1 man-title><span style="color: #727272">Quick list</span> of Our <span
+            style="color: #FF900E; line-height: 2rem;">
+            <br>Features</span>
+        </h1>
+        <p class="des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+          alteration in
+          some form,
+          by injected humour, or randomised words which don't look even</p>
+        <button class="btn-primary">Explore More</button>
+      </div>
+    </section>
+    <section class="benefit-section">
+      <div class="benefit-des">
+        <div id="asidStyle">
+          <aside></aside>
+          <h1 style="font-size: 45px; margin-left: 21px;">Features you will <br> love & enjoy</h1>
+        </div>
+        <p class="des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+          alteration in
+          some form,
+          by injected humour, or randomised words which don't look even</p>
+        <div class="options">
+          <div class="option">
+            <h5 class="opt-title">Dexktop & Mobile Version</h5>
+            <p class="des">There are many variations of passages of Lorem Ipsum available, but the majority have
+              suffered alteration
+              in some form,
+              by injected humour, or randomised...........</p>
+          </div>
+          <div class="option">
+            <h5 class="opt-title">Dexktop & Mobile Version</h5>
+            <p class="des">There are many variations of passages of Lorem Ipsum available, but the majority have
+              suffered alteration
+              in some form,
+              by injected humour, or randomised...........</p>
+          </div>
+          <div class="option">
+            <h5 class="opt-title">Dexktop & Mobile Version</h5>
+            <p class="des">There are many variations of passages of Lorem Ipsum available, but the majority have
+              suffered alteration
+              in some form,
+              by injected humour, or randomised...........</p>
+          </div>
+          <div class="option">
+            <h5 class="opt-title">Dexktop & Mobile Version</h5>
+            <p class="des">There are many variations of passages of Lorem Ipsum available, but the majority have
+              suffered alteration
+              in some form,
+              by injected humour, or randomised...........</p>
+          </div>
+        </div>
+      </div>
+      <div class="benefit-pic">
+        <img src="./images//architect.png" alt="">
+      </div>
+    </section>
+  </main>
+  <footer></footer>
 </body>
 
 </html>
